--- a/app/views/item_products/forms/_search.html.erb
+++ b/app/views/item_products/forms/_search.html.erb
@@ -16,7 +16,7 @@
           <div class="input-group input-group-sm" data-obj="searchForm, #<%= dom_ref('search-item-product', item) %>, itemForm, #<%= dom_ref('edit-item', item) %>, productInput, .product">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
             <%= render 'item_products/forms/reset_search', class_param: 'edit-item-unselect-product' %>
-            <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: boot_classes(:search_input, 'edit-item-select-product') %>
+            <%= f.collection_select :product_id, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: boot_classes(:search_input, 'edit-item-select-product') %>
           </div>
         </div>
       </div>
