refactored product_search_hattr_inputs

--- a/app/views/invoices/_navbar.html.erb
+++ b/app/views/invoices/_navbar.html.erb
@@ -43,8 +43,8 @@
 <div class="pos-f-t">
   <div class="collapse" id="new-skus-toggle" data-parent="#invoice-navbar-forms">
     <hr>
-    <%= render 'skus/search', invoice: invoice, results: results, inputs: inputs %>
-    <%#= render 'skus/search', invoice: invoice, inputs: inputs %>
+    <%#= render 'skus/search', invoice: invoice, results: results, inputs: inputs %>
+    <%= render 'skus/search', invoice: invoice, inputs: product_inputs %>
     <%= render 'skus/form', invoice: invoice, titles: [] %>
     <%= render 'titles/new', invoice: invoice %>
   </div>
@@ -60,8 +60,8 @@
       <%= render 'batch_items/form', invoice: invoice %>
     </div>
     <div id="search-table">
-      <%#= render 'batch_items/table', items: items['items'] %>
-      <%= render 'batch_items/table', items: items %>
+      <%= render 'batch_items/table', items: item_inputs['items'] %>
+      <%#= render 'batch_items/table', items: items %>
     </div>
   </div>
 </div>
