--- a/app/views/skus/_search.html.erb
+++ b/app/views/skus/_search.html.erb
@@ -19,7 +19,8 @@
             <%= render 'item_products/forms/reset_search', class_param: 'new-item-unselect-artist' %>
             <!--selected: inputs['artist']['selected']-->
             <!--selected: inputs['artist']['opts']-->
-            <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: inputs['artist']}, id: "artist-search", class: boot_classes(:search_input, 'search', 'new', 'item', 'artist') %>
+            <%#= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: inputs['artist']}, id: "artist-search", class: boot_classes(:search_input, 'search', 'new', 'item', 'artist') %>
+            <%= f.collection_select :artist_id, inputs['artist']['opts'], :id, :artist_name, {include_blank: true, selected: inputs['artist']['selected']}, id: "artist-search", class: boot_classes(:search_input, 'search', 'new', 'item', 'artist') %>
           </div>
         </div>
 
@@ -29,7 +30,7 @@
             <%= render 'item_products/forms/reset_search', class_param: 'new-item-unselect-product' %>
             <!--selected: inputs['product']['selected']-->
             <!--selected: inputs['product']['opts']-->
-            <%= f.collection_select :product_id, results, :id, :product_name, {include_blank: true, selected: inputs['product']}, id: "product-search", class: boot_classes(:search_input, 'product', 'new-item-select-product') %>
+            <%= f.collection_select :product_id, inputs['product']['opts'], :id, :product_name, {include_blank: true, selected: inputs['product']['selected']}, id: "product-search", class: boot_classes(:search_input, 'product', 'new-item-select-product') %>
           </div>
         </div>
       </div>
