refactored search class method in context of product to give priority to selections that may orverrule other selections including products

--- a/app/views/batch_items/search.js.erb
+++ b/app/views/batch_items/search.js.erb
@@ -1,2 +1,2 @@
 $("#search-item-skus").html("<%= j render 'batch_items/search', invoice: @invoice, inputs: @item_inputs %>");
-$("#search-table").html("<%= j render 'batch_items/table', items: @items %>");
+$("#search-table").html("<%= j render 'batch_items/table', items: @item_inputs['items'] %>");
