--- a/app/views/item_products/forms/_search.html.erb
+++ b/app/views/item_products/forms/_search.html.erb
@@ -3,8 +3,8 @@
     <div class="card bg-gray-d p-0 mb-1 border-0">
       <%= number_field_tag :id, item.id, class: "collapse" %>
 
-      <div class="form-row px-1">
-        <% inputs.each do |input| %>
+      <div class="form-row px-1 table hattrs">
+        <% inputs['hattrs'].each do |input| %>
           <div class="col-3 border-light-gray p-1">
             <div class="input-group input-group-sm">
               <%= render 'item_products/forms/search_group', scope: 'search', input_name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
@@ -15,8 +15,8 @@
         <div class="col-6 border-light-gray p-1">
           <div class="input-group input-group-sm" data-obj="searchForm, #<%= dom_ref('search-item-product', item) %>, itemForm, #<%= dom_ref('edit-item', item) %>, productInput, .product">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
-            <%= render 'item_products/forms/reset_search', class_param: 'edit-item-unselect-product' %>
-            <%= f.collection_select :product_id, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: boot_classes(:search_input, 'edit-item-select-product') %>
+            <%= render 'item_products/forms/reset_search', class_param: 'unselect-table-product' %>
+            <%= f.collection_select :product_id, inputs['product']['opts'], :id, :product_name, {include_blank: true, selected: inputs['product']['selected']}, id: "product-select", class: boot_classes(:search_input, 'table-product', 'product', 'edit-item-select-product') %>
           </div>
         </div>
       </div>
