--- a/app/views/batch_items/_search.html.erb
+++ b/app/views/batch_items/_search.html.erb
@@ -37,7 +37,7 @@
           <div class="input-group input-group-sm" data-form="#new-title" data-input=".artist" data-context="#new-item-skus">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= select "items", "product_id", inputs['product']['opts'].map{|a| [a.product_name, a.id]}, {include_blank: true, selected: inputs['product']['selected']}, {class: boot_classes(:search_input, 'search-select', 'product-select')} %>
+            <%= select "items", "product_id", inputs['product']['opts'].map{|a| [a.product_name, a.id]}, {include_blank: true, selected: inputs['product']['selected']}, {class: boot_classes(:search_input, 'search-select', 'product', 'product-select')} %>
           </div>
         </div>
 
