--- a/app/views/item_products/search.js.erb
+++ b/app/views/item_products/search.js.erb
@@ -1,1 +1,5 @@
-$("#<%= dom_ref('search-item-product', @item) %>").html("<%= j render 'item_products/forms/search', item: @item, inputs: @inputs, products: @products %>");
+$("#<%= dom_ref('search-item-product', @item) %>").html("<%= j render 'item_products/forms/search', item: @item, inputs: @product_inputs %>");
+
+$(function(){
+  if ("<%= @update %>"=='true') $("#<%= dom_ref('edit-item', @item) %>").submit();
+});
