refactored search o product.rb

--- a/app/views/skus/_search.html.erb
+++ b/app/views/skus/_search.html.erb
@@ -2,7 +2,7 @@
 
   <div class="form">
     <div class="card bg-gray-d p-1 mb-1">
-      <div class="form-row mb-2">
+      <div class="form-row mb-2 hattrs">
         <% inputs['hattrs'].each do |input| %>
           <div class="col-3 ml-0">
             <div class="input-group input-group-sm">
