fixed search re scopes: aside from everything else, was passing wrong products to artist_scope

--- a/app/views/skus/search.js.erb
+++ b/app/views/skus/search.js.erb
@@ -1,9 +1,11 @@
 $("#search-skus").html("<%= j render 'skus/search', invoice: @invoice, inputs: @product_inputs %>");
-var artist_id, id = [$("#new-title").find(".artist").val(), "<%= @product_inputs['artist']['selected'] %>"]
+var [artist_id, id] = [$("#new-title").find(".artist").val(), "<%= @product_inputs['artist']['selected'] %>"]
 
 $(function(){
-	if (artist_id==id) {
+	if (artist_id!=id) {
+		console.log(artist_id)
+		console.log(id)
 		$("#new-title").find(".artist").val(id);
-		$("#<%= dom_ref('edit-item', @item) %>").submit();
+		$("#new-title").submit();
 	}
 });
