--- a/app/views/search_items/_search.html.erb
+++ b/app/views/search_items/_search.html.erb
@@ -2,7 +2,7 @@
   <div class="form">
     <div class="card bg-gray-d p-1 mb-1">
 
-      <div class="form-row mt-1">
+      <div class="form-row mt-1 hattrs">
         <% rejected_inputs(inputs['hattrs'], 'measurements', 'edition').each do |input| %>
           <div class="col-3 ml-0">
             <div class="input-group input-group-sm" data-form="#search-items">
