--- a/app/views/artist_items/search.js.erb
+++ b/app/views/artist_items/search.js.erb
@@ -1,1 +1,1 @@
-$("#search-artist-items-toggle").html("<%= j render 'artist_items/search_target', inputs: @item_inputs, items: @items %>");
+$("#search-artist-items-toggle").html("<%= j render 'artist_items/search_target', inputs: @item_inputs %>");
