--- a/app/views/artist_items/_search_target.html.erb
+++ b/app/views/artist_items/_search_target.html.erb
@@ -1,2 +1,2 @@
 <%= render 'artist_items/search', inputs: @item_inputs %>
-<%= render 'search_items/table', items: @items %>
+<%= render 'search_items/table', items: @item_inputs['items'] %>
