--- a/app/views/skus/create.js.erb
+++ b/app/views/skus/create.js.erb
@@ -1,3 +1,3 @@
-$("#search-skus").html("<%= j render 'skus/search', invoice: @invoice, results: @nav_products, inputs: @nav_search_inputs %>");
+$("#search-skus").html("<%= j render 'skus/search', invoice: @invoice, inputs: @product_inputs %>");
 $("#new-skus").html("<%= j render 'skus/form', invoice: @invoice, titles: [] %>");
 $("#items-table").html("<%= j render 'table_skus/table', invoice: @invoice %>");
