--- a/app/views/artists/search.js.erb
+++ b/app/views/artists/search.js.erb
@@ -1,2 +1,2 @@
 $("#edit-artist-toggle").html("<%= j render 'artists/edit', artist: @artist %>");
-$("#search-artist-items-toggle").html("<%= j render 'artist_items/search_target', inputs: @item_inputs %>");
+$("#search-artist-items-toggle").html("<%= j render 'artist_items/search_target', inputs: @item_inputs, items: @items %>");
