--- a/app/views/artist_items/_search.html.erb
+++ b/app/views/artist_items/_search.html.erb
@@ -1,6 +1,5 @@
 <%= form_with model: Item.new, url: search_artist_items_path, method: :get, id: "search-items" do |f| %>
   <div class="form">
-    <%#= number_field_tag "item[artist_id]", nil, class: "artist" %>
     <div class="card bg-gray-d p-1 mb-1">
 
       <div class="form-row mt-1 hattrs">
@@ -19,7 +18,7 @@
           <div class="input-group input-group-sm" data-obj="searchForm, #search-items">
             <%= render 'item_products/forms/search_label', input_name: 'artist' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= select "items", "artist_id", inputs['artist']['opts'].map{|a| [a.artist_name, a.id]}, {selected: inputs['artist']['selected']}, {id: "artist-search", class: boot_classes(:search_input, 'search-select', 'artist-select'), readonly: 'readonly'} %>
+            <%= select "items", "artist_id", inputs['artist']['opts'].map{|a| [a.artist_name, a.id]}, {selected: inputs['artist']['selected']}, {id: "artist-search", class: boot_classes(:search_input, 'search-select', 'artist-select')} %>
           </div>
         </div>
         <div class="col-6 ml-0">
@@ -34,10 +33,10 @@
 
       <div class="form-row mb-1">
         <div class="col-6 ml-0">
-          <div class="input-group input-group-sm" data-form="#search-items">
+          <div class="input-group input-group-sm" data-obj="searchForm, #search-items">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= select "items", "product_id", inputs['product']['opts'].map{|a| [a.product_name, a.id]}, {include_blank: true, selected: inputs['product']['selected']}, {class: boot_classes(:search_input, 'search-select', 'product-select')} %>
+            <%= select "items", "product_id", inputs['product']['opts'].map{|a| [a.product_name, a.id]}, {include_blank: true, selected: inputs['product']['selected']}, {class: boot_classes(:search_input, 'search-select', 'product', 'product-select')} %>
           </div>
         </div>
 
