--- a/app/views/skus/_search.html.erb
+++ b/app/views/skus/_search.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: Item.new, url: search_invoice_skus_path(invoice), method: :get, id: "search-skus" do |f| %>
-
+  <%= hidden_field_tag "items[context]", nil, class: "search-context" %>
   <div class="form">
     <div class="card bg-gray-d p-1 mb-1">
       <div class="form-row mb-2 hattrs">
