--- a/app/views/artist_items/_search.html.erb
+++ b/app/views/artist_items/_search.html.erb
@@ -3,10 +3,10 @@
     <div class="card bg-gray-d p-1 mb-1">
 
       <div class="form-row mt-1 hattrs">
-        <% rejected_inputs(inputs['hattrs'], 'measurements', 'edition').each do |input| %>
+        <% inputs[:hattrs].reject{|k,v| %w[measurements edition].include?(k)}.each do |k, input| %>
           <div class="col-3 ml-0">
             <div class="input-group input-group-sm">
-              <%= render 'item_products/forms/search_group', scope: 'hattrs', input_name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
+              <%= render 'item_products/forms/search_group', scope: 'hattrs', input_name: k, opts: input[:opts], selected: input[:selected] %>
             </div>
           </div>
         <% end %>
@@ -18,14 +18,14 @@
           <div class="input-group input-group-sm" data-obj="searchForm, #search-items">
             <%= render 'item_products/forms/search_label', input_name: 'artist' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= select "items", "artist_id", inputs['artist']['opts'].map{|a| [a.artist_name, a.id]}, {selected: inputs['artist']['selected']}, {id: "artist-search", class: boot_classes(:search_input, 'search-select', 'artist-select')} %>
+            <%= select "items", "artist_id", inputs[:artist][:opts].map{|a| [a.last_name_first, a.id]}, {selected: inputs[:artist][:selected]}, {id: "artist-search", class: boot_classes(:search_input, 'search-select', 'artist-select')} %>
           </div>
         </div>
         <div class="col-6 ml-0">
           <div class="input-group input-group-sm" data-form="#search-items">
             <%= render 'item_products/forms/search_label', input_name: 'title' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= select "items", "title", inputs['title']['opts'], {include_blank: true, selected: inputs['title']['selected']}, {class: boot_classes(:search_input, 'search-select', 'title-select')} %>
+            <%= select "items", "title", inputs[:title][:opts], {include_blank: true, selected: inputs[:title][:selected]}, {class: boot_classes(:search_input, 'search-select', 'title-select')} %>
           </div>
         </div>
       </div>
@@ -36,14 +36,14 @@
           <div class="input-group input-group-sm" data-obj="searchForm, #search-items">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= select "items", "product_id", inputs['product']['opts'].map{|a| [a.product_name, a.id]}, {include_blank: true, selected: inputs['product']['selected']}, {class: boot_classes(:search_input, 'search-select', 'product', 'product-select')} %>
+            <%= select "items", "product_id", inputs[:product][:opts].map{|p| [p.product_name, p.id]}, {include_blank: true, selected: inputs[:product][:selected]}, {class: boot_classes(:search_input, 'search-select', 'product', 'product-select')} %>
           </div>
         </div>
 
-        <% included_inputs(inputs['hattrs'], 'measurements', 'edition').each do |input| %>
+        <% inputs[:hattrs].select{|k,v| %w[measurements edition].include?(k)}.each do |k, input| %>
           <div class="col-3 ml-0 hattrs">
             <div class="input-group input-group-sm" data-form="#search-items">
-              <%= render 'item_products/forms/search_group', scope: 'hattrs', input_name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
+              <%= render 'item_products/forms/search_group', scope: 'hattrs', input_name: k, opts: input[:opts], selected: input[:selected] %>
             </div>
           </div>
         <% end %>
