--- a/app/views/invoices/_navbar.html.erb
+++ b/app/views/invoices/_navbar.html.erb
@@ -43,7 +43,6 @@
 <div class="pos-f-t">
   <div class="collapse" id="new-skus-toggle" data-parent="#invoice-navbar-forms">
     <hr>
-    <%#= render 'skus/search', invoice: invoice, results: results, inputs: inputs %>
     <%= render 'skus/search', invoice: invoice, inputs: product_inputs %>
     <%= render 'skus/form', invoice: invoice, titles: [] %>
     <%= render 'titles/new', invoice: invoice %>
@@ -60,8 +59,7 @@
       <%= render 'batch_items/form', invoice: invoice %>
     </div>
     <div id="search-table">
-      <%= render 'batch_items/table', items: item_inputs['items'] %>
-      <%#= render 'batch_items/table', items: items %>
+      <%= render 'batch_items/table', items: item_inputs[:items] %>
     </div>
   </div>
 </div>
