--- a/app/views/item_products/forms/_search.html.erb
+++ b/app/views/item_products/forms/_search.html.erb
@@ -4,10 +4,10 @@
       <%= number_field_tag :id, item.id, class: "collapse" %>
 
       <div class="form-row px-1 table hattrs">
-        <% inputs['hattrs'].each do |input| %>
+        <% inputs[:hattrs].each do |k, input| %>
           <div class="col-3 border-light-gray p-1">
             <div class="input-group input-group-sm">
-              <%= render 'item_products/forms/search_group', scope: 'search', input_name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
+              <%= render 'item_products/forms/search_group', scope: 'search', input_name: k, opts: input[:opts], selected: input[:selected] %>
             </div>
           </div>
         <% end %>
@@ -16,7 +16,7 @@
           <div class="input-group input-group-sm" data-obj="searchForm, #<%= dom_ref('search-item-product', item) %>, itemForm, #<%= dom_ref('edit-item', item) %>, productInput, .product">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect-table-product' %>
-            <%= f.collection_select :product_id, inputs['product']['opts'], :id, :product_name, {include_blank: true, selected: inputs['product']['selected']}, id: "product-select", class: boot_classes(:search_input, 'table-product', 'product', 'edit-item-select-product') %>
+            <%= f.collection_select :product_id, inputs[:product][:opts], :id, :product_name, {include_blank: true, selected: inputs[:product][:selected]}, id: "product-select", class: boot_classes(:search_input, 'table-product', 'product', 'edit-item-select-product') %>
           </div>
         </div>
       </div>
