--- a/app/views/batch_items/_form.html.erb
+++ b/app/views/batch_items/_form.html.erb
@@ -28,7 +28,7 @@
             <div class="input-group input-group-sm" data-obj="searchForm, #search-item-skus, artistInput, .artist, itemForm, #new-item-skus">
               <%= render "item_fields/caret", card_id: 'artist', target: nil, body: true, i: 0, context: 'body' %>
               <%= render "item_fields/label", label: 'artist' %>
-              <%= f.collection_select :artist_id, Artist.ordered_artists, :id, :artist_name, {include_blank: true}, class: boot_classes(:input, 'item', 'artist'), id: "new-item-skus-artist" %>
+              <%= f.collection_select :artist_id, Artist.sorted, :id, :artist_name, {include_blank: true}, class: boot_classes(:input, 'item', 'artist'), id: "new-item-skus-artist" %>
             </div>
           </div>
 
