--- a/app/views/artist_items/_search.html.erb
+++ b/app/views/artist_items/_search.html.erb
@@ -21,7 +21,7 @@
             <%= select "items", "artist_id", inputs[:artist][:opts].map{|a| [a.last_name_first, a.id]}, {selected: inputs[:artist][:selected]}, {id: "artist-search", class: boot_classes(:search_input, 'search-select', 'artist-select')} %>
           </div>
         </div>
-        <div class="col-6 ml-0">
+        <div class="col-6 ml-0 hattrs">
           <div class="input-group input-group-sm" data-form="#search-items">
             <%= render 'item_products/forms/search_label', input_name: 'title' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
