--- a/app/views/item_fields/_edit.html.erb
+++ b/app/views/item_fields/_edit.html.erb
@@ -1,4 +1,6 @@
 <%= form_with model: item, url: item_field_path(item), id: dom_ref('edit-item-fields', item) do |f| %>
+  <%= hidden_field_tag "update_field", nil, class: "update-field" %>
+  <%= hidden_field_tag "update_context", nil, class: "update-context" %>
   <div class="form">
     <%= text_field_tag "card_id", nil, class: "collapse", id: 'caret-id' %>
     <% rows.each_with_index do |(card_id, card), i| %>
