--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -1,4 +1,6 @@
 <%= form_with model: item, url: invoice_item_path(invoice, item), id: dom_ref('edit-item', item) do |f| %>
+  <%= hidden_field_tag "update_field", nil, class: "update-field" %>
+  <%= hidden_field_tag "update_context", nil, class: "update-context" %>
   <div class="form">
     <div class="card border-0 p-0 mb-1 <%= table_strip(1)%>">
       <%= number_field_tag "item[product_id]", @item.product.try(:id), class: "product collapse" %>
@@ -23,14 +25,14 @@
         <div class="col-2 py-1">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'retail' %>
-            <%= f.number_field :retail, class: boot_classes(:input, 'field-param') %>
+            <%= f.number_field :retail, class: boot_classes(:input, 'field-param'), data: {oldVal:nil} %>
           </div>
         </div>
 
         <div class="col-2 py-1 pr-3">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'qty' %>
-            <%= f.number_field :qty, class: boot_classes(:input, 'field-param') %>
+            <%= f.number_field :qty, class: boot_classes(:input, 'field-param'), data: {oldVal:nil} %>
           </div>
         </div>
       </div>
