added FieldItem controller and refactored import/export to work with hstore columns

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
         <a href="<%= artists_path %>" class="nav-link text-white">
           Artists
         </a>
+        <a href="<%= field_items_path %>" class="nav-link text-white">
+          FieldItems
+        </a>
         <!-- <a href="<%#= products_path %>" class="nav-link text-white">
           Products
         </a> -->
