--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,9 @@
         <a href="<%= field_items_path %>" class="nav-link text-white">
           FieldItems
         </a>
-        <!-- <a href="<%#= products_path %>" class="nav-link text-white">
+        <a href="<%= products_path %>" class="nav-link text-white">
           Products
-        </a> -->
+        </a>
       </nav>
       <%= yield %>
     </div>
