--- a/app/views/field_items/index.html.erb
+++ b/app/views/field_items/index.html.erb
@@ -21,6 +21,7 @@
   <thead>
     <th>ID</th>
     <th>Kind</th>
+    <th>Type</th>
     <th>FieldName</th>
     <th>assocs</th>
     <th>tags</th>
@@ -31,6 +32,7 @@
       <tr>
         <td><%= field_item.id %></td>
         <td><%= field_item.kind %></td>
+        <td><%= field_item.type %></td>
         <td><%= field_item.field_name %></td>
         <td><%= field_item.assocs %></td>
         <td><%= field_item.tags %></td>
