about to attempt modal form for duping skus

--- a/app/views/table_skus/_item.html.erb
+++ b/app/views/table_skus/_item.html.erb
@@ -2,7 +2,7 @@
   <div class="card-header bg-transparent border-0 pt-0 pb-0 pr-0 mr-0">
     <div class="row">
       <div class="col-auto p-0 pt-1 pr-0 ml-0 mr-0 my-0">
-        <span id="#<%= dom_ref('sku', @item) %>" class="fs-s sku-span pt-1"><%= item.sku %></span>
+        <span id="#<%= dom_ref('sku', item) %>" class="fs-s sku-span pt-1"><%= item.sku %></span>
         <%= render 'table_skus/abbrv_tagline', item: item %>
       </div>
 
