--- a/app/views/batch_items/_form.html.erb
+++ b/app/views/batch_items/_form.html.erb
@@ -54,6 +54,8 @@
             </div>
           </div>
         </div>
+
+        <%= render "batch_items/form_row", f: f, item: nil, rows: {} %>
       </div>
     </div>
   </div>
