--- a/app/views/invoices/_navbar.html.erb
+++ b/app/views/invoices/_navbar.html.erb
@@ -56,7 +56,7 @@
       <%= render 'batch_items/search', invoice: invoice, inputs: item_inputs %>
     </div>
     <div>
-      <%= render 'batch_items/form', invoice: invoice %>
+      <%#= render 'batch_items/form', invoice: invoice %>
     </div>
     <div id="search-table">
       <%= render 'batch_items/table', items: item_inputs[:items] %>
