fixed card-id toggle

--- a/app/views/batch_items/_body.html.erb
+++ b/app/views/batch_items/_body.html.erb
@@ -5,7 +5,7 @@
       <div class="input-group input-group-sm" data-obj="artistInput, .artist, itemForm, <%=dom_ref('#new-item-skus', item)%>">
         <%= render "item_fields/caret", card_id: 'artist', target: nil, body: true, i: 0, context: 'body' %>
         <%= render "item_fields/label", label: 'artist' %>
-        <%= f.collection_select :artist_id, Artist.sorted, :id, :artist_name, {include_blank: true, selected: (item.artist.id || nil)}, class: boot_classes(:input, 'item', 'artist'), id: dom_ref('new-item-skus-artist', item) %>
+        <%= f.collection_select :artist_id, Artist.sorted, :id, :artist_name, {include_blank: true, selected: (item.artist.try(:id) || nil)}, class: boot_classes(:input, 'item', 'artist'), id: dom_ref('new-item-skus-artist', item) %>
       </div>
     </div>
 
