--- a/app/views/table_skus/_nav_toggle.html.erb
+++ b/app/views/table_skus/_nav_toggle.html.erb
@@ -7,7 +7,7 @@
     <div class="nav-toggle collapse">
       <div class="btn-group ml-0 mr-3" data-parent="#<%= dom_ref('navbar-forms', item) %>" role="group">
         <button type="button" class="btn btn-sm btn-outline-secondary border-0 py-0 'ml-0' my-0" data-toggle="collapse" data-target="#description-toggle" disabled>Dscrp</button>
-        <button type="button" class="btn btn-sm btn-outline-secondary border-0 py-0 my-0" data-toggle="collapse" data-target="#edit-item-toggle" disabled>Item</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary border-0 py-0 my-0" data-toggle="collapse" data-target="#edit-item-toggle" disabled>Edit</button>
         <button type="button" class="btn btn-sm btn-outline-secondary border-0 py-0 my-0" data-toggle="collapse" data-target="#edit-sku-toggle" disabled>Sku</button>
       </div>
     </div>
