--- a/app/views/table_skus/nav/_navbar.html.erb
+++ b/app/views/table_skus/nav/_navbar.html.erb
@@ -7,7 +7,7 @@
 
     <div class="item-nav nav-toggle m-0 mr-1 collapse" id="<%= dom_ref('nav-toggle', item) %>" data-parent="#item-table">
       <button type="button" class="btn btn-sm btn-outline-secondary squared-right-border squared-left-border py-0 px-1 mx-0 my-1 nav-btn disable dynamic" data-toggle="collapse" data-target="#description-toggle" disabled><span class="fs-s">text</span></button>
-      <button type="button" class="btn btn-sm btn-outline-secondary py-0 px-1 mx-0 my-1 squared-right-border squared-left-border nav-btn disable dynamic" data-toggle="collapse" data-target="#edit-item-toggle" disabled><span class="fs-s">item</span></button>
+      <button type="button" class="btn btn-sm btn-outline-secondary py-0 px-1 mx-0 my-1 squared-right-border squared-left-border nav-btn disable dynamic" data-toggle="collapse" data-target="#edit-item-toggle" disabled><span class="fs-s">edit</span></button>
       <button type="button" class="btn btn-sm btn-outline-secondary py-0 px-1 mx-0 my-1 squared-right-border squared-left-border nav-btn disable dynamic" data-toggle="collapse" data-target="#dup-item-toggle" disabled><span class="fs-s">dup</span></button>
       <button type="button" class="btn btn-sm btn-outline-secondary py-0 px-1 mx-0 my-1 squared-right-border squared-left-border nav-btn disable dynamic" data-toggle="collapse" data-target="#edit-sku-toggle" disabled><span class="fs-s">sku</span></button>
     </div>
